<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.myRecipes.AddRecipeFragment">


    <ImageView
        android:id="@+id/addRecipe_photo_imageView"
        android:layout_width="294dp"
        android:layout_height="174dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addRecipe_photo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/centabel_book"
        android:textStyle="bold"
        android:text="@string/recipe_photo_upload"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_photo_imageView" />

    <EditText
        android:id="@+id/addRecipe_title_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="@font/centabel_book"
        android:hint="@string/recipe_title"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_photo_btn" />

    <View
        android:id="@+id/separator_top_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_title_editText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/addRecipe_ingredients_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/centabel_book"
        android:text="@string/ingredients"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_top_view" />

    <EditText
        android:id="@+id/addRecipe_ingredients_editView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/centabel_book"
        android:textStyle="bold"
        android:imeOptions="actionDone"
        android:inputType="textLongMessage|textMultiLine"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_ingredients_title_textView" />

    <View
        android:id="@+id/separator_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_ingredients_editView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/addRecipe_instructions_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/centabel_book"
        android:text="@string/instructions"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_bottom_view" />

    <EditText
        android:id="@+id/addRecipe_instructions_editView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/centabel_book"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textLongMessage|textMultiLine"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_instructions_title_textView" />

    <Button
        android:id="@+id/addRecipe_share_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/centabel_book"
        android:text="@string/recipe_share"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_instructions_editView" />

    <ProgressBar
        android:id="@+id/addRecipe_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>